Wed Feb 10 12:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSClipView.m:  Tidy flip-view errors by Benhur
	* Source/NSText.m: Lock focus around drawing insertion point while
	becoming/resiging first responder.

Wed Feb 10 10:32:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCell.m: ([-copyWithZone:]) Fixed memory leak - was copying
	AND retaining contents.
	
Tue Feb  9 12:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
	
	* Source/NSView.m: Various tidyups suggested by Benhur
	* Source/PSMatrix.m: ([-rectInMatrixSpace:]) and ([-sizeInMatrixSpace:])
	fixed for negative values.
	* Source/NSScrollView.m: Resize code fix.

Fri Feb  5 19:46:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSView.m: Coordinate conversion fixe by
	Benhur-de-Oliveira.Stein@imag.fr
	* Source/NSClipView.m: turn copy-on-scroll off by defualt until it's
	working properly.
	* Headers/.../NSView.h: Fixed superview methods

Fri Feb  5  6:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSScroller.m: ([-knobRect:]) Correctd code so that the knob
	doesn't jump if you  click on it.

Thu Feb  4 18:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSScroller.m: More fixes by Benhur-de-Oliveira.Stein@imag.fr
	* Source/NSClipView.m: ditto

Thu Feb  4  9:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Tools/dummy.m: renamed to Functions.m
	* Tools/Functions.m: created from dummy.m -some functions added
	* Tools/GNUmakefile: updated dummy.m to Functions.m
	* Source/NSApplication.m: Fixed to update all only when necessary.
	* Source/NSWindow.m: Fix to tell application when update required.
	The following files revised by Benhur-de-Oliveira.Stein@imag.fr 
	* Source/NSScroller.m: Drawing fixes
	* Source/NSScrollView.m: Drawing fixes
	* Source/NSClipViem.m: Drawing fixes

1999-02-01  Adam Fedor  <fedor@gnu.org>
